Closed Bug 1079400 Opened 10 years ago Closed 10 years ago

Windows 8 Nvidia crash during test_conformance__canvas__drawingbuffer-static-canvas-test.html with d3d11 angle

Categories

(Core :: Graphics: CanvasWebGL, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla37

People

(Reporter: jrmuizel, Assigned: jrmuizel)

References

(Depends on 1 open bug)

Details

Attachments

(1 file)

0  nvwgf2um.dll + 0x27f233
    eip = 0x6e82f233   esp = 0x0077cec0   ebp = 0x0077cee0   ebx = 0x1b7afef8
    esi = 0x0cf2a200   edi = 0x0cf2a254   eax = 0x00000000   ecx = 0x0cf2a254
    edx = 0xfedee000   efl = 0x00210246
    Found by: given as instruction pointer in context
 1  nvwgf2um.dll + 0x2a2f91
    eip = 0x6e852f92   esp = 0x0077cee8   ebp = 0x0077cef0
    Found by: previous frame's frame pointer
 2  nvwgf2um.dll + 0xc6c98
    eip = 0x6e676c99   esp = 0x0077cef8   ebp = 0x0077cfcc
    Found by: previous frame's frame pointer
 3  nvwgf2um.dll + 0x134499
    eip = 0x6e6e449a   esp = 0x0077cfd4   ebp = 0x0077cfec
    Found by: previous frame's frame pointer
 4  nvwgf2um.dll + 0x2af0bc
    eip = 0x6e85f0bd   esp = 0x0077cff4   ebp = 0x0077d090
    Found by: previous frame's frame pointer
 5  nvwgf2um.dll + 0x92ad3
    eip = 0x6e642ad4   esp = 0x0077d098   ebp = 0x0077d0bc
    Found by: previous frame's frame pointer
 6  nvwgf2um.dll + 0xa18ae
    eip = 0x6e6518af   esp = 0x0077d0c4   ebp = 0x0077d124
    Found by: previous frame's frame pointer
 7  d3d11.dll + 0x11285
    eip = 0x6f4d1286   esp = 0x0077d12c   ebp = 0x0077d1fc
    Found by: previous frame's frame pointer
 8  d3d11.dll + 0xf684
    eip = 0x6f4cf685   esp = 0x0077d204   ebp = 0x0077d220
    Found by: previous frame's frame pointer
 9  d3d11.dll + 0xfe1b
    eip = 0x6f4cfe1c   esp = 0x0077d228   ebp = 0x0077e178
    Found by: previous frame's frame pointer
10  d3d11.dll + 0xb617
    eip = 0x6f4cb618   esp = 0x0077e180   ebp = 0x0077e190
    Found by: previous frame's frame pointer
11  d3d11.dll + 0x106e8
    eip = 0x6f4d06e9   esp = 0x0077e198   ebp = 0x0077e1cc
    Found by: previous frame's frame pointer
12  d3d11.dll + 0x1060d
    eip = 0x6f4d060e   esp = 0x0077e1d4   ebp = 0x0077e214
    Found by: previous frame's frame pointer
13  d3d11.dll + 0x10493
    eip = 0x6f4d0494   esp = 0x0077e21c   ebp = 0x0077e2bc
    Found by: previous frame's frame pointer
14  d3d11.dll + 0xb253
    eip = 0x6f4cb254   esp = 0x0077e2c4   ebp = 0x0077e3bc
    Found by: previous frame's frame pointer
15  d3d11.dll + 0x1092d
    eip = 0x6f4d092e   esp = 0x0077e3c4   ebp = 0x0077e52c
    Found by: previous frame's frame pointer
16  d3d11.dll + 0x1248d
    eip = 0x6f4d248e   esp = 0x0077e534   ebp = 0x0077e548
    Found by: previous frame's frame pointer
17  libGLESv2.dll!rx::RenderTarget11::RenderTarget11(rx::Renderer *,int,int,unsigned int,int) [RenderTarget11.cpp:7787b778ded9 : 322 + 0x20]
    eip = 0x6d6c01db   esp = 0x0077e550   ebp = 0x0077e5dc
    Found by: previous frame's frame pointer
18  libGLESv2.dll!rx::Renderer11::createRenderTarget(int,int,unsigned int,int) [Renderer11.cpp:7787b778ded9 : 2204 + 0x21]
    eip = 0x6d6c0518   esp = 0x0077e5e4   ebp = 0x0077e5fc
    Found by: call frame info
19  libGLESv2.dll!gl::DepthStencilbuffer::DepthStencilbuffer(rx::Renderer *,int,int,int) [Renderbuffer.cpp:7787b778ded9 : 237 + 0x1e]
    eip = 0x6d66edd3   esp = 0x0077e604   ebp = 0x0077e618
    Found by: call frame info
20  libGLESv2.dll!gl::Depthbuffer::Depthbuffer(rx::Renderer *,int,int,int) [Renderbuffer.cpp:7787b778ded9 : 260 + 0x16]
    eip = 0x6d66ee13   esp = 0x0077e620   ebp = 0x0077e634
    Found by: call frame info
21  libGLESv2.dll!gl::Context::setRenderbufferStorage(int,int,unsigned int,int) [Context.cpp:7787b778ded9 : 739 + 0x21]
    eip = 0x6d670e3c   esp = 0x0077e63c   ebp = 0x0077e650
    Found by: call frame info
22  libGLESv2.dll!glRenderbufferStorageMultisampleANGLE [libGLESv2.cpp:7787b778ded9 : 3737 + 0x12]
    eip = 0x6d68886f   esp = 0x0077e658   ebp = 0x0077e66c
    Found by: call frame info
23  xul.dll!mozilla::gl::CreateRenderbuffer(mozilla::gl::GLContext *,unsigned int,int,mozilla::gfx::IntSizeTyped<mozilla::gfx::UnknownUnits> const &) [GLBlitHelper.cpp:7787b778ded9 : 96 + 0x1f]
    eip = 0x72723ba5   esp = 0x0077e674   ebp = 0x0077e6a0
    Found by: call frame info
Depends on: 1079396
Blocks: 1079398
It looks like this is caused by asking for a depth buffer of 16383 with 4 samples of antialiasing.
Depends on: 1083902
Attached patch patchSplinter Review
Attachment #8532413 - Flags: review?(jgilbert)
Comment on attachment 8532413 [details] [diff] [review]
patch

Review of attachment 8532413 [details] [diff] [review]:
-----------------------------------------------------------------

::: gfx/angle/src/libGLESv2/renderer/d3d/d3d11/RenderTarget11.cpp
@@ +278,5 @@
> +UINT EstimateSize(D3D11_TEXTURE2D_DESC &desc)
> +{
> +    //XXX: handle overflow
> +    const d3d11::DXGIFormat &dxgiFormatInfo = d3d11::GetDXGIFormatInfo(desc.Format);
> +    UINT total = rx::roundUp(desc.Width, UINT(8)) * rx::roundUp(desc.Height, UINT(64)) * desc.SampleDesc.Count * dxgiFormatInfo.pixelBytes;

It would be nice to name these magic numbers with constants, and/or a comment.
Attachment #8532413 - Flags: review?(jgilbert) → review+
https://hg.mozilla.org/mozilla-central/rev/41db5f408338
Assignee: nobody → jmuizelaar
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla37
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: