Bug 1079400. Limit the maximum render target size to avoid crashes. r=jgilbert

This avoids crashes with certain NVIDIA drivers.