gfx/angle/src/libGLESv2/renderer/d3d/d3d11/Renderer11.cpp
@@ -1817,6 +1817,12 @@ DWORD Renderer11::getAdapterVendor() const
     return mAdapterDescription.VendorId;
 }
 
+SIZE_T Renderer11::getMaxResourceSize() const
+{
+    // This formula comes from http://msdn.microsoft.com/en-us/library/windows/desktop/ff819065%28v=vs.85%29.aspx
+    return std::min(std::max(SIZE_T(128 * 1024 * 1024), mAdapterDescription.DedicatedVideoMemory), SIZE_T(2048) * 1024 * 1024);
+}
+
 std::string Renderer11::getRendererDescription() const
 {
     std::ostringstream rendererString;
